Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
6.2.4, 6.3.2
-
None
-
-
9f7eb2bace (qt/qtmultimedia/dev) 9f7eb2bace (qt/tqtc-qtmultimedia/dev) 128c7c4306 (qt/qtmultimedia/6.4) 128c7c4306 (qt/tqtc-qtmultimedia/6.4)
Description
I see such crashes among our users crash reports.
Unhandled exception at 0x00007FF878A0A4ED (Qt6Multimedia.dll) in minidump (14).dmp: 0xC0000005: Access violation reading location 0x0000000000000000.
Stack:
> [Inline Frame] Qt6Multimedia.dll!QWindowsMediaDevices::availableDevices::__l2::<lambda_2f23d0588699a4b6c338ae29032467a7>::operator()() Line 337 C++
Qt6Multimedia.dll!QWindowsMediaDevices::availableDevices(QAudioDevice::Mode mode) Line 330 C++
Qt6Multimedia.dll!QWindowsMediaDevices::audioOutputs() Line 395 C++
[Inline Frame] Qt6Multimedia.dll!QMediaDevices::audioOutputs() Line 169 C++
Qt6Multimedia.dll!QMediaDevices::defaultAudioOutput() Line 227 C++
Qt6Multimedia.dll!QAudioOutput::QAudioOutput(QObject * parent) Line 91 C++
...
It seems IMMDeviceEnumerator::GetDefaultAudioEndpoint may return null device even if succeeded, so we need to check this explicitly.
Attachments
For Gerrit Dashboard: QTBUG-108898 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
445567,1 | QWindowsMediaDevices: Fix potential null-pointer-access | tqtc/lts-6.2 | qt/tqtc-qtmultimedia | Status: NEW | 0 | 0 |
445432,2 | QWindowsMediaDevices: Fix potential null-pointer-access | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
445566,2 | QWindowsMediaDevices: Fix potential null-pointer-access | 6.4 | qt/qtmultimedia | Status: MERGED | +2 | 0 |