QWindowsMediaDevices: Fix potential null-pointer-access

It seems sometimes IMMDeviceEnumerator::GetDefaultAudioEndpoint() may return null device even when succeeded. It's probably a bug in MS Core Audio. So we'll check this explicitly to prevent null-pointer-access.

Fixes: QTBUG-108898
Pick-to: 6.2 6.4
Change-Id: Iba1e6673f12a3dafd80f3de11e40babeb1e21e35
Reviewed-by: Lars Knoll <lars@knoll.priv.no>